--- a/app/src/main/res/layout/alert_layout.xml
+++ b/app/src/main/res/layout/alert_layout.xml
@@ -4,13 +4,14 @@
         android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/imageView"
         android:src="@mipmap/image"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true" />
 
     <TextView
         android:layout_width="wrap_content"
